# molecule-dynamic-visitor

./: .gitignore  Cargo.toml  README.md  test_main.c  test_rv64.c
.github/workflows/: rust.yml
clib/: bech32m.h  mol2_definitions.h  molecule-dynamic-visitor.h  molecule2_reader.h  utf8.h
crates/misc-data-generator/: Cargo.toml
crates/misc-data-generator/src/: main.rs
crates/misc-data-generator/src/schemas/: misc.rs  mod.rs
crates/molecule-schema-compacter/: Cargo.toml
crates/molecule-schema-compacter/src/: main.rs
crates/molecule-schema-compacter/src/schemas/: builtins.json  definitions.rs  mod.rs
crates/spore-data-generator/: Cargo.toml
crates/spore-data-generator/src/: main.rs
crates/spore-data-generator/src/schemas/: mod.rs  spore.rs
schemas/: builtins.mol  definitions.mol  misc.mol
