[package]
name = "spore-data-generator"
description = "Random Spore action data generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.16", features = ["cargo"] }
molecule = { git = "https://github.com/xxuejie/molecule", rev = "29d8155" }
rand = "0.8.5"
ckb-sdk = "3.0.1"
ckb-types = "0.111.0"
